stack.yaml
kind: DeploymentConfig
apiVersion: v1
metadata:
  labels:
    run: redis
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: redis
    spec:
      volumes:
      - name: redis-data
        emptyDir: {}
      containers:
      - image: redis:alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 5
          tcpSocket:
            port: 6379
          timeoutSeconds: 1
        readinessProbe:
          initialDelaySeconds: 5
          tcpSocket:
            port: 6379
          timeoutSeconds: 1
        volumeMounts:
          - name: redis-data
            mountPath: /data/
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  labels:
    run: redis
  name: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    run: redis
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: postgresql-95-centos7
  labels:
    app: postgresql-95-centos7
spec:
  strategy:
    type: Recreate
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  replicas: 1
  test: false
  selector:
    app: postgresql-95-centos7
    deploymentconfig: postgresql-95-centos7
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgresql-95-centos7
        deploymentconfig: postgresql-95-centos7
    spec:
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
      containers:
        - name: postgresql-95-centos7
          image: centos/postgresql-95-centos7
          ports:
            - containerPort: 5432
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/pgsql/data
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
      restartPolicy: Always
      nodeSelector:
        zone: zone-2
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
---
kind: Service
apiVersion: v1
metadata:
  name: db
  labels:
    app: postgresql-95-centos7
spec:
  ports:
    - name: 5432-tcp
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgresql-95-centos7
    deploymentconfig: postgresql-95-centos7
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
---
kind: Service
apiVersion: v1
metadata:
  labels:
    run: sentry
  name: sentry
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
    name: http
  selector:
    run: sentry-web
---
kind: Route
apiVersion: v1
metadata:
  name: sentry-web
spec:
  host: sentry.company.com
  to:
    kind: Service
    name: sentry
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  labels:
    run: sentry-cron
  name: sentry-cron
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: sentry-cron
    spec:
      containers:
      - image: sentry:8.20
        imagePullPolicy: Always
        name: sentry-cron
        volumeMounts:
        - name: config-volume
          mountPath: /etc/sentry/
        command: ["sentry","run","cron"]
      volumes:
      - name: config-volume
        configMap:
          name: sentry
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  labels:
    run: sentry-worker
  name: sentry-worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: sentry-worker
    spec:
      containers:
      - image: sentry:8.20
        imagePullPolicy: Always
        name: sentry-worker
        volumeMounts:
        - name: config-volume
          mountPath: /etc/sentry/
        command: ["sentry","run","worker"]
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: config-volume
        configMap:
          name: sentry
---
kind: DeploymentConfig
apiVersion: v1
metadata:
  labels:
    run: sentry-web
  name: sentry-web
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: sentry-web
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: sentry
      containers:
      - image: sentry:8.20
        name: sentry-web
        imagePullPolicy: Always
        volumeMounts:
          - name: config-volume
            mountPath: /etc/sentry/
        ports:
        - containerPort: 9000
          protocol: TCP
